Bug 1542172 - Firefox freezes when inspecting large POST data. r=Honza
Truncate the Request Payload if it exceeds the `devtools.netmonitor.requestBodyLimit` pref and show `Request has been truncated` error in the Params Tab

Differential Revision: https://phabricator.services.mozilla.com/D27898

UltraBlame original commit: 8e100a978832b8844097b54976456a008ff7805c

--- a/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
@@ -329,6 +329,15 @@
 
 
 
+.network-monitor .request-error-header {
+  margin: 0;
+  padding: 3px 8px;
+  background-color: var(--theme-highlight-red);
+  color: var(--theme-selection-color);
+}
+
+
+
 .network-monitor .response-error-header {
   margin: 0;
   padding: 3px 8px;
